# tracer-daemon

./: .gitignore  Cargo.toml  README.md  REFACTORING_PLAN.md  error_log.txt  error_outgoing_http_calls.txt  install-tracer.sh  log_outgoing_http_calls.txt  logs_processing.txt  old-main.rs  tracer.toml
.github/workflows/: build-and-test.yml  cross-platform-release.yml
chipseq-test/: chipseq.sh
ebpf-data-collection/: Cargo.toml
ebpf-data-collection/.cargo/: config.toml
ebpf-data-collection/src/: main.rs
src/: data_submission.rs  event_recorder.rs  file_system_watcher.rs  file_watcher.rs  main.rs  nondaemon_commands.rs  process.rs  process_watcher.rs  submit_batched_data.rs  system_state_manager.rs  task_wrapper.rs  tracer_client.rs
src/cli/: mod.rs  nondaemon_commands.rs
src/config_manager/: bashrc_intercept.rs  config.rs  mod.rs  targets.rs  targets_list.rs  task_wrapper.rs
src/config_manager/target_process/: mod.rs  target_matching.rs  targets_list.rs
src/daemon_communication/: client.rs  mod.rs  server.rs  structs.rs
src/debug_log/: mod.rs
src/ebpf/: bpf.c  mod.rs
src/errors/: conditions.rs  mod.rs  templates.rs
src/events/: mod.rs
src/file_content_watcher/: mod.rs  stderr_patterns.rs  stdout_patterns.rs  syslog_patterns.rs
src/http_client/: mod.rs
src/load_ebpf/: mod.rs
src/metrics/: mod.rs
src/s3_upload/: mod.rs  upload_to_signed_url.rs
src/stdout/: mod.rs
src/syslog/: mod.rs  patterns.rs
src/upload/: mod.rs  presigned_url_put.rs  upload_to_signed_url.rs
test-files/: syslog
test-files/var/log/: syslog
