[package]
name = "tracer"
version = "0.0.115"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.15"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
daemonize = "0.5"
homedir = "0.2.1"
lazy_static = "1.5.0"
log = "0.4.21"
octocrab = "0.38.0"
predicates = "3.1.2"
regex = "1.10.6"
random-string = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.117"
serial_test = "3.1.1"
sysinfo = "0.30"
tempfile = "3.11.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tracing = "0.1.40"
url = "2.5.2"
linemux = "0.3.0"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
aya = "0.12"
aya-log = "0.2"
env_logger = "0.9"
libc = "0.2"
fnv = { version = "1.0.3" }